syntax = "proto3";

package route256.product;

option go_package = "https://gitlab.ozon.dev/genius4666/homework/product/internal/pkg/product";

import "google/api/annotations.proto";

service ProductService{
  rpc GetProduct(route256.product.GetProductRequest) returns (route256.product.GetProductResponse){
    option (google.api.http) = {
        post: "/get_product"
        body: "*"
    };
  }
  rpc ListSkus(route256.product.ListSkusRequest) returns (route256.product.ListSkusResponse){
    option (google.api.http) = {
        post: "/list_skus"
        body: "*"
    };
  }
}

message GetProductRequest {
  string token = 1;
  uint32 sku = 2;
}

message GetProductResponse {
  string name = 1;
  uint32 price = 2;
}

message ListSkusRequest {
  string token = 1;
  uint32 start_after_sku = 2;
  uint32 count = 3;
}

message ListSkusResponse {
  repeated uint32 skus = 1;
}